Fixed the broken layout of the buttons

--- a/style.css
+++ b/style.css
@@ -39,8 +39,7 @@ img.dropdown-item {
 
 .btn {
    background-color: green;
+   border-color: green;
 }
 
-.btn:hover {
-    
-}
+
